--- a/deans/public/css/adminlte.css
+++ b/deans/public/css/adminlte.css
@@ -20334,7 +20334,10 @@ html.maximized-card {
 
 .login-box,
 .register-box {
-  width: 360px;
+  width: 100%;
+  max-width: 500px;
+  min-width: 360px;
+
 }
 
 @media (max-width: 576px) {
