--- a/deans/resources/sass/app.scss
+++ b/deans/resources/sass/app.scss
@@ -4,3 +4,27 @@
     z-index: 1;
     width: 800px;
 }
+
+
+.user-login{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    img{
+        height: 40px;
+        width: auto;
+        border-radius: 50%;
+        border-width: 2px;
+        border-color: #ccc;
+        border-style: solid;
+    }
+
+    p{
+        margin: 0 0 0 10px;
+        align-self: center;
+    }
+}
+
+.text-black{
+    color: black;
+}
